<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>splice_machine</artifactId>
	<packaging>jar</packaging>
	<name>splice_machine</name>
	<description>Splice Machine</description>
	<parent>
		<artifactId>structured_hbase</artifactId>
		<groupId>com.splicemachine</groupId>
		<version>1.0.1-SNAPSHOT</version>
	</parent>


	<dependencies>

		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>${derby.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyTesting</artifactId>
			<version>${derby.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbynet</artifactId>
			<version>${derby.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyclient</artifactId>
			<version>${derby.version}</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-core</artifactId>
			<version>2.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbytools</artifactId>
			<version>${derby.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyrun</artifactId>
			<version>${derby.version}</version>
		</dependency>
		<dependency>
			<groupId>com.splicemachine</groupId>
			<artifactId>structured_si</artifactId>
			<version>1.0.1-SNAPSHOT</version>
			<type>jar</type>
			          		<classifier>${envClassifier}</classifier>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.1</version>
		</dependency>
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>2.6.6</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>

		<!-- Some plugins (javadoc for example) can be used in the normal build- 
			and the site phase. These plugins inherit their options from the <reporting> 
			section below. These settings can be overwritten here. -->
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>			 
				<!--  
					<parallel>classes</parallel>
          			<threadCount>5</threadCount>
          			<perCoreThreadCount>false</perCoreThreadCount>    
					-->
					<argLine>-Xms256M -Xmx512M</argLine>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<includes>f
						<include>${runClass}</include>
					</includes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.splicemachine</groupId>
						<artifactId>structured_si</artifactId>
						<version>1.0.1-SNAPSHOT</version>
									          		<classifier>${envClassifier}</classifier>
					</dependency>

				</dependencies>
			</plugin>

				<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<source>6</source>
					<descriptors>
						<descriptor>${project.basedir}/src/main/assembly/assembly.xml</descriptor>
					</descriptors>
					<archive>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>splice</id>
			<activation>
				<property>
					<name>splice</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<classpathScope>compile</classpathScope>
							<executable>java</executable>
							<arguments>
								<argument>-cp</argument>
								<classpath>${maven.runtime.classpath}</classpath>
								<argument>-Xdebug</argument>
                        <argument>-Djava.awt.headless=true</argument>
								<argument>-Dlog4j.configuration=file:${basedir}/src/main/resources/trace-log4j.properties</argument>
								<argument>-Xmx2g</argument>
								<argument>-Xms1g</argument>
                                <argument>-enableassertions</argument>
								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4000</argument>
								<argument>com.splicemachine.test.SpliceTestPlatform</argument>
								<argument>${project.build.directory}/zookeeper</argument>
								<argument>${project.build.directory}/hbase</argument>
							</arguments>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>

		<profile>
			<id>spliceClusterMember</id>
			<activation>
				<property>
					<name>spliceClusterMember</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<classpathScope>compile</classpathScope>
							<executable>java</executable>
							<arguments>
								<argument>-cp</argument>
								<classpath>${maven.runtime.classpath}</classpath>
								<argument>-Xdebug</argument>
                        	<argument>-Djava.awt.headless=true</argument>	
								<argument>-Dlog4j.configuration=file:${basedir}/src/main/resources/trace-log4j.properties</argument>
								<argument>-Xmx2g</argument>
								<argument>-Xms1g</argument>
								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
								<argument>com.splicemachine.test.SpliceTestClusterParticipant</argument>
								<argument>${project.build.directory}/hbase</argument>
								<argument>60021</argument>
								<argument>60031</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>spliceZoo</id>
			<activation>
				<property>
					<name>zoo</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-clean-plugin</artifactId>
						<version>2.5</version>
						<executions>
							<execution>
								<goals>
									<goal>clean</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<excludeDefaultDirectories>true</excludeDefaultDirectories>
							<filesets>
								<fileset>
									<directory>${project.build.directory}/hbase</directory>
									<includes>
										<include>**/*</include>
									</includes>
								</fileset>
								<fileset>
									<directory>${project.build.directory}/zookeeper</directory>
									<includes>
										<include>**/*</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>java</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<mainClass>org.apache.zookeeper.server.ZooKeeperServerMain</mainClass>
							<executable>maven</executable>
							<arguments>
								<argument>2181</argument>
								<argument>${project.build.directory}/zookeeper</argument>
								<argument>10</argument>
								<argument>0</argument>
							</arguments>
                     <systemProperties>
                        <systemProperty>
                           <key>java.awt.headless</key>
                           <value>true</value>
                        </systemProperty>
                     </systemProperties>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>spliceCI</id>
			<activation>
				<property>
					<name>spliceCI</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<classpathScope>compile</classpathScope>
							<executable>java</executable>
							<arguments>
								<argument>-cp</argument>
								<classpath>${maven.runtime.classpath}</classpath>
								<argument>-Xdebug</argument>
								<argument>-Dlog4j.configuration=file:${basedir}/src/main/resources/info-log4j.properties</argument>
								<argument>-Xmx3g</argument>
								<argument>-Xms1g</argument>
                                <argument>-enableassertions</argument>
								<argument>com.splicemachine.test.SpliceTestPlatform</argument>
								<argument>${project.build.directory}/zookeeper</argument>
								<argument>${project.build.directory}/hbase</argument>
								<argument>60021</argument>
								<argument>60022</argument>
								<argument>60023</argument>
								<argument>60024</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>spliceClusterMemberFast</id>
			<activation>
				<property>
					<name>spliceClusterMemberFast</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<classpathScope>compile</classpathScope>
							<executable>java</executable>
							<arguments>							
								<argument>-cp</argument>
								<classpath>${maven.runtime.classpath}</classpath>
								                        	<argument>-Djava.awt.headless=true</argument>	
								<argument>-Dlog4j.configuration=file:${basedir}/src/main/resources/info-log4j.properties</argument>
								<argument>-Xmx2g</argument>
								<argument>-Xms1g</argument>
 								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
								<argument>com.splicemachine.test.SpliceTestClusterParticipant</argument>
								<argument>${project.build.directory}/hbase</argument>
								<argument>60021</argument>
								<argument>60031</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>splice-java</id>
			<activation>
				<property>
					<name>splice-java</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>java</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<mainClass>com.splicemachine.test.SpliceTestPlatform</mainClass>
							<executable>maven</executable>
							<arguments>
								<argument>${project.build.directory}/zookeeper</argument>
								<argument>${project.build.directory}/hbase</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
        <profile>
            <id>spliceFast</id>
            <activation><property><name>spliceFast</name></property></activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <classpathScope>compile</classpathScope>
                            <executable>java</executable>
                            <arguments>
                                <argument>-cp</argument>
                                <classpath>${maven.runtime.classpath}</classpath>
                                <argument>-Xdebug</argument>
                                <argument>-XX:+UseConcMarkSweepGC</argument>
                                <argument>-Dlog4j.configuration=file:${basedir}/src/main/resources/info-log4j.properties</argument>
                                <argument>-Djava.awt.headless=true</argument>
                                <argument>-Xmx2g</argument>
                                <argument>-Xms1g</argument>
                                <argument>-XX:MaxPermSize=128M</argument>
                                <argument>-enableassertions</argument>
                                <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4000</argument>
                                <argument>com.splicemachine.test.SpliceTestPlatform</argument>
                                <argument>${project.build.directory}/zookeeper</argument>
                                <argument>${project.build.directory}/hbase</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
		</build>
	</profile>

		<profile>
			<id>ij</id>
			<activation>
				<property>
					<name>ij</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>java</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<mainClass>org.apache.derby.tools.ij</mainClass>
							<includeProjectDependencies>true</includeProjectDependencies>
							<executable>maven</executable>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>

		<profile>
			<id>info</id>
			<activation>
				<property>
					<name>info</name>
				</property>
			</activation>
			<properties>
				<log4j.location>${basedir}/src/main/resources/info-log4j.properties</log4j.location>
			</properties>
		</profile>


		<profile>
			<id>trace</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<log4j.location>${basedir}/src/main/resources/trace-log4j.properties</log4j.location>
			</properties>
		</profile>

		<profile>
			<id>harness</id>
			<activation>
				<property>
					<name>harness</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<includeProjectDependencies>true</includeProjectDependencies>
							<classpathScope>compile</classpathScope>
							<executable>java</executable>
							<arguments>
								<argument>-cp</argument>
								<classpath>${maven.runtime.classpath}</classpath>
								<argument>org.apache.derbyTesting.functionTests.harness.RunTest</argument>
								<argument>${test}</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>

			</build>

		</profile>

	</profiles>

</project>
